css/main.css
@-moz-viewport {width: device-width; scale: 1;}
@-ms-viewport {width: device-width; scale: 1;}
@-o-viewport {width: device-width; scale: 1;}
@-webkit-viewport {width: device-width; scale: 1;}
@viewport {width: device-width; scale: 1;}

html {
  box-sizing: border-box;
  font-family: 'dosis', sans-serif;
  background-color: #bfd3e4;
}
*, *::before, *::after {
  box-sizing: inherit;
 }
 body{
 	margin: 0 0 0 .25em;
 }
 ol{
 	padding: 0;
 }

 .logo{
 	width: 50%;
 	display: block;
 	margin: 0 auto;
 	text-align: center;
 }

 h1{
 	font-size: 1.5rem;
 	text-align: center;
 }
 .buy{
 	padding: 0 .5em 0 .5em;
 	background-color: #9235cb;
 	text-align: center;
 	width: 40%;
 	margin: 0 auto;
 }
 nav{
 	margin: 0;
 	padding:0;
 }

 .nav a{
 	text-decoration: none;
 	display: block;
 	padding: .5em 1em;
 	color: #fff;

  }
 .pano {
 	background-image: url("../images/pano.jpg");
 	width: 100%;
 	position: relative;
 	height: 20em;
 }

.seven {
 	position: absolute; 
 	padding-left: 1em;
 	color: white;
 	text-align: center;
 	top: 100px;
 }
 .sevwon{
 	font-size: 1.5rem;
 	color: #fff;
 }
 h2{
 	display: block;
 	text-align: center;
 	color: #416003;
 }
 .giza{
 	width: 100%;
 }

 dl{
 	display: inline-block;
 }
 dd{
 	display: inline-block;
 }
 .learn{
 	text-align: center;
 	margin: 0 auto;
 	width: 60%;
 	float: left;
 	display: block;
 }
 h3{
 	color: #00b2c4;
 }
 .atlantis{
  	position: relative;
 	width: 100%;
 }
 .nowplaying{
 	position: relative;
 	color: white;
 	width: 100%; 
 	top: -110px;
 	padding-left: .5em;
 }
.babylon{
	width: 100%;
}
.artemis{
	width: 100%;
}
.zeus{
	width: 100%;
}
.mauso{
	width: 100%;
}
.rhodes{
	width: 100%;
}
.alex{
	width: 100%;
}
a {
	display: block;
	border: .1em solid black;
	text-decoration: none;
	padding: 0;
	margin: .2em .25em .2em .5em;
	background-color: black;
	color: white;
}
footer{
	background-color: white;
	margin: 0;
	padding-left: .5em;
	padding: 1em;
}
@media only screen and (min-width: 30em) {

	.logo{
		display: inline-block;
		text-align: center;
		width: 20%;
	}
	h1{
		display: inline-block;
		font-size: 2rem;
	}
	h2{
		font-size: 1.75rem;
	
	}
	.float{
		float: right;
		padding-right: 1em;
		display: inline-block;
		top: 100px;
	
	}
	.learnmore{
		clear: both;
		display: inline;
	}
	.giza{
		width: 50%;
		margin-bottom: 1em;
}
	.babylon{
		width: 50%;
		margin-bottom: 1em;

}

	.artemis {
	width: 50%;
	margin-bottom: 1em;

}

	.zeus{
	width: 50%;
	margin-bottom: 1em;

}
.mauso{
	width: 50%;
	margin-bottom: 1em;

}
.rhodes{
	width: 50%;
	margin-bottom: 1em;

}
.alex{
	width: 50%;
	margin-bottom: 1em;

